--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,7 +1,7 @@
 .cart-dropdown {
     position: absolute;
-    width: 240px;
-    height: 340px;
+    width: 360px;
+    height: 540px;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -10,12 +10,17 @@
     top: 90px;
     right: 40px;
     z-index: 5;
+
+    .empty-message{
+      font-size:18px;
+      margin:50px auto;
+    }
   
     .cart-items {
-      height: 240px;
+      height: 340px;
       display: flex;
       flex-direction: column;
-      overflow: scroll;
+      overflow-y: scroll;
     }
   
     button {
